# fastio

./: .gitignore  AGENTS.md  Cargo.toml  FUZZING.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benches/: io_benchmarks.rs  profile_targets.rs
examples/: README.md  mmap_map.rs  sync_read_write.rs  tokio_read_write.rs  uring_batch_read.rs  write_slices.rs
fuzz/: Cargo.toml
fuzz/targets/: write_slices.rs
src/: AGENTS.md  README.md  buffer.rs  io_uring.rs  lib.rs  mmap.rs  range.rs  traits.rs  uring.rs  write.rs
src/sync/: AGENTS.md  README.md  linux.rs  macos.rs  mod.rs  windows.rs
src/tokio/: AGENTS.md  README.md  mod.rs
