[package]
name = "fastio"
version = "0.3.0"
edition = "2024"
rust-version = "1.93"
description = "Fast cross-platform file I/O backends for Rust"
license = "Apache-2.0"
repository = "https://github.com/botirk38/fastio"
keywords = ["io", "storage", "performance", "mmap", "async"]
categories = ["filesystem", "asynchronous", "concurrency"]
exclude = ["AGENTS.md", "src/**/AGENTS.md", ".github", "fuzz"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["sync", "mmap", "tokio", "io-uring"]
sync = []
mmap = ["dep:memmap2", "dep:region"]
tokio = ["dep:tokio"]
io-uring = ["dep:io-uring", "dep:libc"]

[dependencies]
memmap2 = { version = "0.9", optional = true }
region = { version = "3.0", optional = true }
tokio = { version = "1", optional = true, features = ["rt", "rt-multi-thread", "fs", "macros", "io-util"] }
zeropool = { version = "0.7", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }
libc = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
memmap2 = "0.9"
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "macros", "io-util"] }

[[bench]]
name = "io_benchmarks"
harness = false
required-features = ["sync", "mmap", "tokio", "io-uring"]

[[bench]]
name = "profile_targets"
harness = false
required-features = ["sync", "mmap", "tokio", "io-uring"]
